Add SQLite + Repository + Model, Create layout for Main and Detail

--- a/DamePizzu/MainPage.xaml
+++ b/DamePizzu/MainPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:helpers="clr-namespace:DamePizzu.Helpers"
+             xmlns:vm="clr-namespace:DamePizzu.ViewModel"
              x:Class="DamePizzu.MainPage">
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -10,6 +11,10 @@
             </OnPlatform>
         </ResourceDictionary>
     </ContentPage.Resources>
+
+    <ContentPage.BindingContext>
+        <vm:MainViewModel />
+    </ContentPage.BindingContext>
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Clicked="GoToCart">
@@ -20,26 +25,43 @@
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
-        <StackLayout>
-            <ImageButton Source="{FontImage FontFamily={StaticResource MaterialFontFamily}, Glyph={x:Static helpers:IconFont.Youtube}, Color=DarkRed,Size=44}"/>
-
-            <Image
-                Grid.Column="2"
-                HeightRequest="44"
-                HorizontalOptions="Center"
-                VerticalOptions="Center"
-                WidthRequest="44">
-                <Image.Source>
-                    <FontImageSource
-                        FontFamily="{StaticResource MaterialFontFamily}"
-                        Glyph="{x:Static helpers:IconFont.Youtube}"
-                        Size="44"
-                        Color="Blue" />
-                </Image.Source>
-            </Image>
-
-            <Label Text="{x:Static helpers:IconFont.PlayBox}" FontSize="50" TextColor="Orange" FontFamily="{StaticResource MaterialFontFamily}" HorizontalOptions="Center" />
-        </StackLayout>
+        <Grid Padding="30" BackgroundColor="Black" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid Padding="0,10" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+            <StackLayout Spacing="0" HorizontalOptions="Center" VerticalOptions="Center">
+                <Label Text="Dáme PIZZU" TextColor="White" FontFamily="ThemeFont" FontSize="50" HorizontalOptions="Center"/>
+            </StackLayout>
+        </Grid>
+        <CollectionView x:Name="foodList" Margin="0,40,0,0" Grid.Row="1" ItemsSource="{Binding Foods}" SelectionMode="Single" 
+                        SelectedItem="{Binding SelectedFood}" VerticalScrollBarVisibility="Never" 
+                        SelectionChangedCommand="{Binding SelectionCommand}">
+            <CollectionView.ItemsLayout>
+                <GridItemsLayout Orientation="Vertical" VerticalItemSpacing="20" HorizontalItemSpacing="20" Span="2"/>
+            </CollectionView.ItemsLayout>
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Grid Padding="10" BackgroundColor="#131313" WidthRequest="145" HeightRequest="160">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Image Aspect="AspectFit" Source="{Binding Image}" Margin="10" WidthRequest="125" HeightRequest="110" 
+                               HorizontalOptions="Center" VerticalOptions="Center"/>
+                        <Label Grid.Row="1" Text="{Binding Name}" TextColor="#F9B522" FontFamily="ThemeFont" 
+                               VerticalOptions="End" HorizontalOptions="Start"/>
+                        <Label Grid.Row="1" Text="{Binding Price, StringFormat='{0} Kč'}" TextColor="White" FontFamily="ThemeFont"
+                               VerticalOptions="End" HorizontalOptions="End"/>
+                    </Grid>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+            <CollectionView.Footer>
+                <Grid HeightRequest="0"/>
+            </CollectionView.Footer>
+        </CollectionView>
+    </Grid>
     </ContentPage.Content>
 
 </ContentPage>
